@@ -1,9 +1,12 @@
 package com.fastcampus.projectboard.service;
 
 import com.fastcampus.projectboard.domain.Hashtag;
+import com.fastcampus.projectboard.repository.HashtagRepository;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -12,17 +15,33 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 @Service
 public class HashtagService {
+	private final HashtagRepository hashtagRepository;
 
 	@Transactional(readOnly = true)
 	public Set<Hashtag> findHashtagByNames(Set<String> hashtagNames) {
-		return new HashSet<>();
+		return new HashSet<>(hashtagRepository.findByHashtagNameIn(hashtagNames));
 	}
 
 	public Set<String> parseHashtagNames(String content) {
-		return Collections.emptySet();
-	}
+		if (content == null) {
+			return Set.of();
+		}
+
+		Pattern pattern = Pattern.compile("#[\\w가-힣]+");
+		Matcher matcher = pattern.matcher(content.strip());
+		Set<String> result = new HashSet<>();
+
+		while (matcher.find()) {
+			result.add(matcher.group().replace("#", ""));
+		}
+
+		return Set.copyOf(result);
+ 	}
 
 	public void deleteHashtagWithoutArticles(Long hashtagId) {
-
+		Hashtag hashtag = hashtagRepository.getReferenceById(hashtagId);
+		if (hashtag.getArticles().isEmpty()) {
+			hashtagRepository.delete(hashtag);
+		}
 	}
 }
